--- a/Impressum.Rmd
+++ b/Impressum.Rmd
@@ -33,6 +33,10 @@ write_json(frueindikatoren,"data/frueindikatoren.json")
 #write_json(theoretisch,"data/vorwarnzeiten.json")
 ```
 
+Row <!--{data-height=100}-->
+-----------------------------------------------------------------------
+
+### **Impressum**
 
 **Zentralinstitut für die kassenärztliche Versorgung in der Bundesrepublik Deutschland (Stiftung des bürgerlichen Rechts)**
 
