--- a/Start.Rmd
+++ b/Start.Rmd
@@ -12,8 +12,7 @@ output:
     logo: static/logo.png
     theme: bootstrap
     css: static/styles.css
-    
-    
+    # resize_reload: false
 ---
 
 ```{r setup, include=FALSE}
@@ -38,10 +37,10 @@ library(stringr)
 library(ggplot2)
 library(dtplyr)
 source("R/functions.R", encoding = "UTF-8")
-# load("~/covid19dashboard/testforknit.RData")
+# load("test.RData")
 ```
 
-Row {data-height=150}
+Row <!--{data-height=150}-->
 ------------------------------------------------------------------------
 
 ### **Zi-Frühindikatoren:** 
@@ -124,10 +123,11 @@ valueBox(paste(vorwarnzeitaktuell,"Tage"),
         )
 ```
 
-Row {data-height=260}
+Row <!--{data-height=260}-->
 ------------------------------------------------------------------------
-\
-**Legende:** \
+
+### Legende:
+
 ***Reproduktionszahl R***: Anzahl der Personen, die eine infizierte Person durchschnittlich mit COVID-19 infiziert. \
 <!-- *Neue Fälle pro Tag (7-Tages-Durchschnitt)*: Durchschnittliche Anzahl neuer Fälle pro Tag in den letzten 7 Meldetagen.\ -->
 ***Neue Fälle je 100.000 Einwohnende in 7 Tagen***: Auch als "7-Tage-Inzidenz" oder "Handlungsgrenze" bezeichnet. Wegen Meldeverzügen fehlen für einige Kreise/Bundesländer die Fallzahlen des Vortages. Fehlende Werte imputieren wir mit dem Mittelwert der vorhergehenden 6 Tage, um die 7-Tage-Inzidenz vergleichbarer zu machen.\
@@ -154,9 +154,7 @@ Row {data-height=260}
 
 <!-- Dargestellt ist die theoretische Vorwarnzeit bis zur Überschreitung der Kapazität an Intensivbetten abhängig von der Reproduktionszahl R, ausgehend von der durchschnittlichen aktuellen Zahl an Neuinfektionen in Deutschland. Die Neuinfektionen wurden über einen Zeitraum von 7 Tagen gemittelt, um Schwankungen auszugleichen. Die effektive Vorwarnzeit ist geringer als die theoretische Vorwarnzeit. Hier wird eine Reaktionszeit von 21 Tagen angenommen, bis ein R-Wert erkannt und Maßnahmen wirksam implementiert sind. -->
 
-
-
-Row {data-height=400}
+Row <!--{data-height=400}-->
 ------------------------------------------------------------------------
 ### **Entwicklung der akut Infizierten**
 
@@ -165,21 +163,20 @@ ggplotly(akutinfiziert + labs(title="")) %>% # , width=800, height=400
    config(displayModeBar = FALSE, responsive=TRUE)
 ```
 
-### **Entwicklung der akut Infizierten** {.mobile}
+<!-- ### **Entwicklung der akut Infizierten** {.mobile} -->
 
-```{r plotakutinfiziert_mobile, out.width = "100%"}
-ggplotly(akutinfiziert + labs(title=""), width=350, height=400) %>% # 
-   config(displayModeBar = FALSE, responsive=TRUE)
-```
+<!-- ```{r plotakutinfiziert_mobile, out.width = "100%"} -->
+<!-- ggplotly(akutinfiziert + labs(title=""), width=350, height=400) %>% #  -->
+<!--    config(displayModeBar = FALSE, responsive=TRUE) -->
+<!-- ``` -->
 
-Row {data-height=100}
+Row <!--{data-height=100}-->
 ------------------------------------------------------------------------
+### Erläuterung
 
 Dargestellt ist die Entwicklung der Anzahl von akut infizierten Personen in Deutschland. Angenommen wird, dass die Personen i.d.R. 15 Tage nach der gemeldeten Erkrankung nicht mehr akut infiziert sind. Die Zahl hatte am 6.4.2020 ihren bisherigen Höhepunkt in der ersten Welle von ca. 74 Tsd. Personen. 
 
-
-
-Row {data-height=400}
+Row <!--{data-height=400}-->
 ------------------------------------------------------------------------
 
 ### **Entwicklung des Alters der Infizierten sowie des Verhältnis von ITS- und Todesfällen zu gemeldeten Fällen**
@@ -190,17 +187,17 @@ ggplotly(age_plot_fatality, tooltip = c("x", "y")) %>% # , width=800, height=400
   config(displayModeBar = FALSE, responsive=TRUE)
 ```
 
-### **Entwicklung des Alters der Infizierten sowie des Verhältnis von ITS- und Todesfällen zu gemeldeten Fällen** {.mobile}
+<!-- ### **Entwicklung des Alters der Infizierten sowie des Verhältnis von ITS- und Todesfällen zu gemeldeten Fällen** {.mobile} -->
 
-```{r plotagefatality_mobile}
-ggplotly(age_plot_fatality, tooltip = c("x", "y"), width=350, height=400) %>% # 
-  layout(legend = list(orientation = "h", x = 0.1, y = 1.2), autosize=TRUE) %>%
-  config(displayModeBar = FALSE, responsive=TRUE)
-```
+<!-- ```{r plotagefatality_mobile} -->
+<!-- ggplotly(age_plot_fatality, tooltip = c("x", "y"), width=350, height=400) %>% #  -->
+<!--   layout(legend = list(orientation = "h", x = 0.1, y = 1.2), autosize=TRUE) %>% -->
+<!--   config(displayModeBar = FALSE, responsive=TRUE) -->
+<!-- ``` -->
 
-
-Row {data-height=150}
+Row <!--{data-height=150}-->
 ------------------------------------------------------------------------
+### Erläuterung
 
 Dargestellt ist die Entwicklung des Anteils von neu gemeldeten akut infizierten Personen im Alter ab 60 Jahren an allen gemeldeten Fällen in Deutschland. Zudem wird das Verhältnis von Todesfällen an den gemeldeten Fällen dargestellt, sowie das Verhältnis der auf der Intensivstation behandelten Fälle (ITS) an den zum entsprechenden Zeitpunkt akut Infizierten. Während alle Werte zu Beginn der Pandemie gleichlautend verlaufen sind (Daten für ITS-Fälle ab Ende April), hat sich die Entwicklung zuletzt entkoppelt. Die Zahl der Todesfälle ist für die letzten Wochen noch nicht aussagekräftig, da ein Todesfall meist nach schwerem und langem Krankheitsverlauf eintritt.
 
@@ -227,7 +224,7 @@ Dargestellt ist die Entwicklung des Anteils von neu gemeldeten akut infizierten 
 <!-- Dargestellt ist die Entwicklung der Reproduktionszahl R auf Ebene der Bundesländer. Der Wert für den Bund ist blau dargestellt. R beschreibt die mittlere Anzahl von Neu-Infektionen, die von einer Person im Laufe ihrer COVID-19-Infektion angesteckt werden. R wird aus den Meldedaten des RKI geschätzt. -->
 
 
-Row {data-height=400}
+Row <!--{data-height=400}-->
 -----------------------------------------------------------------------
 
 ### **Entwicklung der Vorwarnzeit (und Vergleich zum R-Wert des RKI)**
@@ -237,36 +234,19 @@ ggplotly(vorwarnzeitverlauf_plot, tooltip = c("x", "y", "text")) %>% # , width=8
   config(displayModeBar = FALSE, responsive=TRUE)
 ```
 
-### **Entwicklung der Vorwarnzeit (und Vergleich zum R-Wert des RKI)** {.mobile}
+<!-- ### **Entwicklung der Vorwarnzeit (und Vergleich zum R-Wert des RKI)** {.mobile} -->
 
-```{r plotVWZR_mobile}
-ggplotly(vorwarnzeitverlauf_plot, tooltip = c("x", "y", "text"), width=350, height=400) %>% # 
-  config(displayModeBar = FALSE, responsive=TRUE)
-```
+<!-- ```{r plotVWZR_mobile} -->
+<!-- ggplotly(vorwarnzeitverlauf_plot, tooltip = c("x", "y", "text"), width=350, height=400) %>% #  -->
+<!--   config(displayModeBar = FALSE, responsive=TRUE) -->
+<!-- ``` -->
 
-Row {data-height=100}
+Row <!--{data-height=100}-->
 ------------------------------------------------------------------------
 
+### Erläuterung
+
 Dargestellt ist die Entwicklung der Zi-Vorwarnzeit für die BRD, ebenso zum Vergleich die Entwicklung des (7-Tage-)R-Wertes, wie er vom RKI gemeldet wird.
-
-Row
------------------------------------------------------------------------
-
-### **Überblick zu den Kennzahlen der Bundesländer**
-
-<!-- <div style = "width:99%; height:ato; margin: 0px; padding-right:2rem;"> -->
-<div style = "width:99% !important; height:auto; margin: auto;">
-```{r tableBL}
-DT::datatable(rki_fallzahl_bl(),
-              extensions = 'Responsive',
-              options = list(paging = FALSE,
-                             searching = FALSE,
-                             language = list(url = '//cdn.datatables.net/plug-ins/1.10.11/i18n/German.json'),
-                             server = FALSE,
-                             initComplete = JS("function(settings, json) {","$(this.api().table().header()).css({'background-color':'#0086C5','color': '#fff'});","}")))
-
-```
-</div>
 
 <!-- ### **Überblick zu den Kennzahlen der Bundesländer** {.mobile} -->
 
@@ -283,10 +263,10 @@ DT::datatable(rki_fallzahl_bl(),
 
 
 
-Row {data-height=250}
+Row <!--{data-height=250}-->
 ------------------------------------------------------------------------
-\
-**Methodischer Hinweis zum R-Wert:** \
+### Methodischer Hinweis zum R-Wert:
+
 *In die Berechnung des R-Wertes gehen verschiedene Annahmen ein, da der Wert aufgrund unvollständiger Informationen zu Infektionsketten in der Regel geschätzt werden muss. Die Methodik des Zi und des RKI unterscheiden sich dabei in zwei zentralen Punkten. Das RKI betrachtet die neuen Erkrankten nach Erkrankungsdatum im Vergleich von zwei 4-Tages-Perioden und nimmt dadurch eine 4-tägige-Ansteckungsperiode an. Dabei müssen für etwa ein Drittel der Infizierten das Erkrankungsdatum geschätzt und Nachmeldungen durch das sog. Nowcasting interpoliert werden. Das Zi verwendet das Meldedatum als Infektionsbeginn und berücksichtigt eine längere Infektionsperiode, in der die meisten Ereignisse am 4. Tag auftreten, Ansteckungen aber auch später auftreten können (Gamma-Verteilung mit MW=4, SD=5). Beide Ansätze haben Vor- und Nachteile und zeigen langfristig die gleiche Tendenz an. Sowohl das Zi als auch das RKI schließen bei der Berechnung der R-Werte die Fallzahlen der letzten 4 Tage aus, da diese noch zu unverlässlich wegen Meldeverzügen sind.*
 
 ```{r renderothersites, include=FALSE}
