--- a/Start.Rmd
+++ b/Start.Rmd
@@ -199,7 +199,7 @@ Row <!--{data-height=150}-->
 ------------------------------------------------------------------------
 ### Erläuterung
 
-Dargestellt ist die Entwicklung des Anteils von neu gemeldeten akut infizierten Personen im Alter ab 60 Jahren an allen gemeldeten Fällen in Deutschland. Zudem wird das Verhältnis von Todesfällen an den gemeldeten Fällen dargestellt, sowie das Verhältnis der auf der Intensivstation behandelten Fälle (ITS) an den zum entsprechenden Zeitpunkt akut Infizierten. Während alle Werte zu Beginn der Pandemie gleichlautend verlaufen sind (Daten für ITS-Fälle ab Ende April), hat sich die Entwicklung zuletzt entkoppelt. Die Zahl der Todesfälle ist für die letzten Wochen noch nicht aussagekräftig, da ein Todesfall meist nach schwerem und langem Krankheitsverlauf eintritt.
+Dargestellt ist die Entwicklung des Anteils von neu gemeldeten akut infizierten Personen im Alter ab 60 Jahren an allen gemeldeten Fällen in Deutschland. Zudem wird das Verhältnis von Todesfällen an den gemeldeten Fällen dargestellt, sowie das Verhältnis der auf der Intensivstation behandelten Fälle (ITS) an der Zahl der akut Infizierten zwei Wochen davor (es dauert etwa 14 Tage, bis eine schwere COVID-19-Infektion intensivmedizinisch behandelt werden muss). Daten für ITS-Fälle liegen erst ab Ende April vor. Die Zahl der Todesfälle ist für die letzten Wochen noch nicht aussagekräftig, da ein Todesfall meist nach schwerem und langem Krankheitsverlauf eintritt.
 
 
 Row <!--{data-height=400}-->
