--- a/Bundeslaender.Rmd
+++ b/Bundeslaender.Rmd
@@ -24,7 +24,7 @@ Row
 <!-- <div style = "width:99%; height:ato; margin: 0px; padding-right:2rem;"> -->
 <div style = "width:99% !important; height:auto; margin: auto;">
 ```{r tableBL}
-DT::datatable(rki_fallzahl_bl(),
+DT::datatable(bundeslaender_table,
               extensions = 'Responsive',
               options = list(paging = FALSE,
                              searching = FALSE,
