--- a/Kreise.Rmd
+++ b/Kreise.Rmd
@@ -14,7 +14,7 @@ output:
     css: static/styles.css
 ---
 
-Row <!--{data-height=100}-->
+Row
 -----------------------------------------------------------------------
 
 ### **Überblick zu den Kennzahlen der Kreise**
