final update autumn cleaning #24

--- a/Start.Rmd
+++ b/Start.Rmd
@@ -73,8 +73,8 @@ Row
 ### Neue Fälle je 100.000 Einwohnende in 7 Tagen
 
 ```{r indicator7TI}
-faelleprotag <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_pro_Tag)
-faelle7tage100kEW <-  vorwarnzeitergebnis %>% filter(id==0) %>% pull(Faelle_letzte_7_Tage_je100TsdEinw)
+faelleprotag <-  vorwarnzeitergebnis %>% filter(id==0 & date==maxdatum) %>% pull(Faelle_letzte_7_Tage_pro_Tag)
+faelle7tage100kEW <-  vorwarnzeitergebnis %>% filter(id==0 & date==maxdatum) %>% pull(Faelle_letzte_7_Tage_je100TsdEinw)
 valueBox(faelle7tage100kEW,
          caption=paste0("Neue Fälle je 100.000 Einwohnende in 7 Tagen \n unter 60-Jährige: ",
                         letzte_7_tage_altersgruppen_bund %>% pull(`Faelle_letzte_7_Tage_je100TsdEinw_0-59`),
@@ -96,9 +96,10 @@ Row
 ### Vorwarnzeit bei R=1,3 
 
 ```{r indicatorVWZ}
-vorwarnzeitaktuell <- vorwarnzeitergebnis %>% filter(id==0) %>% pull(Vorwarnzeit)
+vorwarnzeitaktuell <- vorwarnzeitergebnis %>% filter(id==0 & date==maxdatum) %>%
+  pull(Vorwarnzeit)
 valueBox(paste(vorwarnzeitaktuell,"Tage"),
-         caption=paste0("Vorwarnzeit bis Erreichen der Kapazitätsgrenze \n effektive Vorwarnzeit: ", vorwarnzeitergebnis %>% filter(id==0) %>% pull(Vorwarnzeit_effektiv), " Tage"),
+         caption=paste0("Vorwarnzeit bis Erreichen der Kapazitätsgrenze \n effektive Vorwarnzeit: ", vorwarnzeitergebnis %>% filter(id==0 & date==maxdatum) %>% pull(Vorwarnzeit_effektiv), " Tage"),
          icon = "fa-calendar-alt",
          color = case_when(vorwarnzeitaktuell > 81 ~ "#B1C800",
                            vorwarnzeitaktuell <= 81 & 
@@ -114,14 +115,14 @@ Row
 
 ***Reproduktionszahl R***: Anzahl der Personen, die eine infizierte Person durchschnittlich mit COVID-19 infiziert. \
 ***Neue Fälle je 100.000 Einwohnende in 7 Tagen***: Auch als "7-Tage-Inzidenz" oder "Handlungsgrenze" bezeichnet. Wegen Meldeverzügen fehlen für einige Kreise/Bundesländer die Fallzahlen des Vortages. Fehlende Werte imputieren wir mit dem Mittelwert der vorhergehenden 6 Tage, um die 7-Tage-Inzidenz vergleichbarer zu machen. \
-***Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung der stationären Behandlungskapazitäten (Annahme: für zukünftige COVID-19-Fälle stehen die derzeit freien Betten sowie bereits mit COVID-19-Fällen belegte Betten zur Verfügung) ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. Wir berücksichtigen die aktuelle Altersstruktur der Infizierten und unterschiedliche Raten der Intensivfälle: 1,37% für Unter-60-Jährige, 10,2% für 60-bis-79-Jährige, sowie 18,3% für Über-80-Jährige. Diese Quoten wurden auf Basis der im Intensivregister gemeldeten Fälle mit Korrektur für Doppelzählungen auf Grund von Verlegungen (27%) sowie COVID-19-Charakteristiken aus der Literatur bestimmt. Die "effektive Vorwarnzeit" ist die Vorwarnzeit abzüglich der angenommenen Reaktionszeit von 21 Tagen, bis ergriffene neue Maßnahmen wirken. Vgl. Methodenpapier.
+***Vorwarnzeit bei R=1,3***: Anzahl von Tagen bis zur Überschreitung der stationären Behandlungskapazitäten (Annahme: für zukünftige COVID-19-Fälle stehen die derzeit freien Betten sowie bereits mit COVID-19-Fällen belegte Betten zur Verfügung) ab heute, falls R=1,3 ab dem `r format(now(),format="%d.%m.%Y")`. Wir berücksichtigen die aktuelle Altersstruktur der Infizierten und unterschiedliche Raten der Intensivfälle: `r round(icurate_altersgruppen$Hosp059*100, 2)`% für Unter-60-Jährige, `r round(icurate_altersgruppen$Hosp6079*100, 2)`% für 60-bis-79-Jährige, sowie `r round(icurate_altersgruppen$Hosp80*100, 2)`% für Über-80-Jährige. Diese Quoten wurden auf Basis der im Intensivregister gemeldeten Fälle mit Korrektur für Doppelzählungen auf Grund von Verlegungen (27%) sowie COVID-19-Charakteristiken aus der Literatur bestimmt. Die "effektive Vorwarnzeit" ist die Vorwarnzeit abzüglich der angenommenen Reaktionszeit von 21 Tagen, bis ergriffene neue Maßnahmen wirken. Vgl. Methodenpapier.
 
 Row
 ------------------------------------------------------------------------
 ### **Entwicklung der akut Infizierten**
 
 ```{r plotakutinfiziert}
-ggplotly(akutinfiziert + labs(title="")) %>% 
+ggplotly(akutinfiziert_plot + labs(title="")) %>% 
    config(displayModeBar = FALSE, responsive=TRUE)
 ```
 
@@ -137,7 +138,7 @@ Row
 ### **Entwicklung des Alters der Infizierten sowie des Verhältnis von ITS- und Todesfällen zu gemeldeten Fällen**
 
 ```{r plotagefatality}
-ggplotly(age_plot_fatality, tooltip = c("x", "y")) %>%
+ggplotly(agefatality_plot, tooltip = c("x", "y")) %>%
   layout(legend = list(orientation = "h", x = 0.1, y = 1.2), autosize=TRUE) %>%
   config(displayModeBar = FALSE, responsive=TRUE)
 ```
@@ -154,7 +155,7 @@ Row
 ### **Entwicklung der Reproduktionszahl**
 
 ```{r plotBLR}
-ggplotly(plot_rwert_bund, tooltip = c("x", "y", "text")) %>%
+ggplotly(rwert_bund_plot, tooltip = c("x", "y", "text")) %>%
   config(displayModeBar = FALSE, responsive=TRUE)
 
 ```
